# otus_homework_02

./: .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  filter.cpp  filter.h  main.cpp
test/: CMakeLists.txt  test_main.cpp
